--- a/Notebooks/ETL.ipynb
+++ b/Notebooks/ETL.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,14 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Usuario\\AppData\\Local\\Temp\\ipykernel_18396\\4144701810.py:1: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Usuario\\AppData\\Local\\Temp\\ipykernel_13144\\4144701810.py:1: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  dfmovies = pd.read_csv('C:/Users/Usuario/Documents/Programacion/Henry/TP1/movies_dataset.csv')\n"
      ]
     },
@@ -465,7 +465,7 @@
        "[45466 rows x 24 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1658,7 +1658,7 @@
        " ...]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1694,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1720,11 +1720,11 @@
      "output_type": "stream",
      "text": [
       "Error en indice 19729 al convertir la cadena en lista de diccionarios.\n",
-      "Error malformed node or string on line 1: <ast.Name object at 0x000002946DA75550> (Valor nulo).\n",
+      "Error malformed node or string on line 1: <ast.Name object at 0x0000023B1D29DD10> (Valor nulo).\n",
       "Error en indice 29502 al convertir la cadena en lista de diccionarios.\n",
-      "Error malformed node or string on line 1: <ast.Name object at 0x000002944F997410> (Valor nulo).\n",
+      "Error malformed node or string on line 1: <ast.Name object at 0x0000023B0199B2D0> (Valor nulo).\n",
       "Error en indice 35586 al convertir la cadena en lista de diccionarios.\n",
-      "Error malformed node or string on line 1: <ast.Name object at 0x00000294655712D0> (Valor nulo).\n"
+      "Error malformed node or string on line 1: <ast.Name object at 0x0000023B14D84ED0> (Valor nulo).\n"
      ]
     },
     {
@@ -3221,7 +3221,7 @@
        " ...]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3257,7 +3257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3275,7 +3275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3283,11 +3283,11 @@
      "output_type": "stream",
      "text": [
       "Error en indice 19729 al convertir la cadena en lista de diccionarios.\n",
-      "Error malformed node or string on line 1: <ast.Name object at 0x000002946E2D8ED0> (Valor nulo).\n",
+      "Error malformed node or string on line 1: <ast.Name object at 0x0000023B1A360E90> (Valor nulo).\n",
       "Error en indice 29502 al convertir la cadena en lista de diccionarios.\n",
-      "Error malformed node or string on line 1: <ast.Name object at 0x000002946ABDCA10> (Valor nulo).\n",
+      "Error malformed node or string on line 1: <ast.Name object at 0x0000023B1A6C8A90> (Valor nulo).\n",
       "Error en indice 35586 al convertir la cadena en lista de diccionarios.\n",
-      "Error malformed node or string on line 1: <ast.Name object at 0x000002946AE3F5D0> (Valor nulo).\n"
+      "Error malformed node or string on line 1: <ast.Name object at 0x0000023B1A7A3710> (Valor nulo).\n"
      ]
     },
     {
@@ -4304,7 +4304,7 @@
        " ...]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4340,7 +4340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4358,7 +4358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -4366,11 +4366,11 @@
      "output_type": "stream",
      "text": [
       "Error en indice 19729 al convertir la cadena en lista de diccionarios.\n",
-      "Error malformed node or string on line 1: <ast.Name object at 0x000002946BD01E50> (Valor nulo).\n",
+      "Error malformed node or string on line 1: <ast.Name object at 0x0000023B1B641A50> (Valor nulo).\n",
       "Error en indice 29502 al convertir la cadena en lista de diccionarios.\n",
-      "Error malformed node or string on line 1: <ast.Name object at 0x000002946BE85390> (Valor nulo).\n",
+      "Error malformed node or string on line 1: <ast.Name object at 0x0000023B1B7C5490> (Valor nulo).\n",
       "Error en indice 35586 al convertir la cadena en lista de diccionarios.\n",
-      "Error malformed node or string on line 1: <ast.Name object at 0x000002946BF80210> (Valor nulo).\n"
+      "Error malformed node or string on line 1: <ast.Name object at 0x0000023B1B8C02D0> (Valor nulo).\n"
      ]
     },
     {
@@ -5379,7 +5379,7 @@
        " ...]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5415,7 +5415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5440,7 +5440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5463,7 +5463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5501,7 +5501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -5632,7 +5632,7 @@
        "[45476 rows x 3 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5651,7 +5651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -22949,7 +22949,7 @@
        " ...]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22993,7 +22993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -24009,7 +24009,7 @@
        " ...]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24054,7 +24054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -24185,7 +24185,7 @@
        "[45476 rows x 3 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24206,7 +24206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -24644,7 +24644,7 @@
        "[45511 rows x 22 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24664,7 +24664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24681,7 +24681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -24711,7 +24711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -25149,7 +25149,7 @@
        "[45433 rows x 22 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25160,7 +25160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -25212,7 +25212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
